# ProjectForPP5

./: CMakeLists.txt  db.cpp  db.h  main.cpp  make_photo.cpp  make_photo.h
